--- a/Agenda/Agenda/Agenda.csproj
+++ b/Agenda/Agenda/Agenda.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contato.cs" />
+    <Compile Include="DAO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
